--- a/emacs.org
+++ b/emacs.org
@@ -14,7 +14,7 @@ Hopefully only need to change these to get setup on a new machine.
   ;; Location of org files: projects, inbox, next,  whip, journal, and habits
   (setq jmn-gtd-directory "~/Documents/gtd/")
 
-  ;; Systems which should download packages
+  ;; Systems which should download packages. Others get the "vanilla" configuration.
   (setq jmn-connected-systems '("lat" "dsk" "xps"))
 #+end_src
 
@@ -30,7 +30,8 @@ This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-con
       (let ((org-confirm-babel-evaluate nil))
         (org-babel-tangle))))
 
-  (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'efs/org-babel-tangle-config)))
+  (add-hook 'org-mode-hook
+            (lambda () (add-hook 'after-save-hook #'efs/org-babel-tangle-config)))
 #+end_src
 
 ** Packages and Management
@@ -87,11 +88,13 @@ Use-package is macro that is used like a package manager. [[https://github.com/j
   (add-hook 'text-mode-hook 'flyspell-mode)	; enable spellcheck on text mode
   (setq Buffer-menu-name-width 35)		; give name more room
   (setq-default indicate-empty-lines t)		; indicate long lines
+  (defalias 'yes-or-no-p 'y-or-n-p)               ; Make  =yes or no= prompts shorter
 
   ;; The following helps syncing
   (global-auto-revert-mode 1)			; refresh buffer if changed on disk
   (setq auto-revert-use-notify nil)		; don't notify?
   (setq auto-revert-verbose nil)			;
+  (if jmn-vanilla (global-visual-line-mode 1))    ; word wrap for vanilla
 
   ;; Set scratch buffer to be in org-mode and modify initial message
   (setq initial-major-mode 'org-mode)
@@ -117,18 +120,21 @@ Recentf is needed for recent files on the dashboard.
   (run-at-time nil (* 5 60) 'recentf-save-list) ;; save recent files periodically
 
   ;; Exclude the following files from the recents list
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "inbox.org"))
   (add-to-list 'recentf-exclude (concat jmn-gtd-directory "next.org"))
   (add-to-list 'recentf-exclude (concat jmn-gtd-directory "whip.org"))
   (add-to-list 'recentf-exclude (concat jmn-gtd-directory "someday.org"))
-  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "inbox.org"))
-  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "project.org"))
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "journal.org"))
+  (add-to-list 'recentf-exclude (concat jmn-gtd-directory "habits.org"))
   (add-to-list 'recentf-exclude
                (concat (file-name-directory jmn-config-location) "emacs.html"))
 
-  ;; if in vanilla, display recent files on startup
   (if jmn-vanilla
-      (add-hook 'after-init-hook (lambda ()
-                                   (recentf-open-files))))
+      (progn
+        ;; display recent files on startup
+        (add-hook 'after-init-hook (lambda () (recentf-open-files)))
+        ;; make display recent files the dashboard command
+        (global-set-key (kbd "C-c d") 'recentf-open-files)))
 #+end_src
 
 *** Transparency
@@ -140,11 +146,6 @@ Set transparency
     (if (version<= "29" emacs-version)
         (set-frame-parameter nil 'alpha-background value)
       (set-frame-parameter (selected-frame) 'alpha value)))
-#+end_src
-
-*** Make  =yes or no= prompts shorter
-#+begin_src emacs-lisp
-(defalias 'yes-or-no-p 'y-or-n-p)
 #+end_src
 
 *** Scrolling
@@ -235,8 +236,7 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
                             (bookmarks . 5)
                             (projects . 5)
                             (agenda . 5)
-                            (registers . 5)
-                            ))
+                            (registers . 5)))
 
     (setcdr (assoc 'projects dashboard-item-shortcuts) "j")
     (setq dashboard-set-heading-icons t)
@@ -299,7 +299,8 @@ Dash board for initial startup of emacs. [[https://github.com/emacs-dashboard/em
   )
 
   ;; compilation-mode
-  (add-hook 'compilation-mode-hook (lambda () (define-key compilation-mode-map (kbd "C-o") 'other-window)))
+  (add-hook 'compilation-mode-hook
+            (lambda ()(define-key compilation-mode-map (kbd "C-o") 'other-window)))
 
   ;; grep-mode
   (defun jmn-grep-keybindings()
@@ -449,7 +450,7 @@ Counsel displays ivy-rich info along with suggestions in input buffer.
 #+end_src
 
 ** Helpful and Which-key
-**** Helpful
+*** Helpful
 Better version of help. We remap normal help keys to Helpful's versions.
 Archive: melpa
 #+begin_src emacs-lisp
@@ -466,7 +467,7 @@ Archive: melpa
     ([remap describe-key] . helpful-key))
 #+end_src
 
-**** Which-key
+*** Which-key
 Archive: elpa, melpa
 #+begin_src emacs-lisp
   (use-package which-key
@@ -512,14 +513,14 @@ Works w/o being logged in.                         [[https://github.com/emacs-gr
 #+end_src
 
 ** General Helper Function
-**** jmn-load-init
+*** jmn-load-init
 #+begin_src emacs-lisp
   (defun jmn-load-init ()
     (interactive)
     (load "~/.emacs.d/init.el"))
 #+end_src
 
-**** jmn-vscode-current-buffer-file-at-point
+*** jmn-vscode-current-buffer-file-at-point
 #+begin_src emacs-lisp
   (defun jmn/vscode-current-buffer-file-at-point ()
     (interactive)
@@ -649,20 +650,6 @@ Help in sorting the completion results.
 
 #+end_src
 
-** Centaur-Tabs (not using)
-#+begin_src emacs-lisp :tangle no
-  (use-package centaur-tabs
-    :if window-system
-    :ensure t
-    :defer t
-    :init
-    (setq centaur-tabs-style "bar")
-    (setq centaur-tabs-set-icons t)
-    :config
-    (centaur-tabs-headline-match)
-    (centaur-tabs-mode t))
-#+end_src
-
 ** LSP and DAP
 *** lsp-mode
 Provides language backend to company-mode.
@@ -752,8 +739,7 @@ Archive: melpa
 #+begin_src emacs-lisp
   (use-package cmake-mode
     :defer t
-    :ensure-system-package
-    ((cmake . "sudo dnf install -y cmake"))
+    :ensure-system-package ((cmake . "sudo dnf install -y cmake"))
     :mode ("CMakeLists\\.txt\\'" "\\.cmake\\'"))
 
   (use-package cmake-font-lock
@@ -770,8 +756,7 @@ Archive: melpa
 #+begin_src emacs-lisp
   (use-package cmake-project
     :hook ((c++-mode . cmake-project-mode )
-           (c-mode . cmake-project-mode))
-    )
+           (c-mode . cmake-project-mode)))
 #+end_src
 
 ** Yasnippet
@@ -851,6 +836,7 @@ Note: not used or tangled
 Gives of tab completion in:
 - [X] python-mode
 - [X] emacs-lisp-mode
+- [X] shell-script mode (bash)
 
 With this setup, TAB - which is usually bound to indent-for-tab-command - first tries to adjust the indentation according to the mode's settings, but if the indentation is already correct, completion is triggered. This is usually the desired behavior, and IMHO works better than third-party plugins like smart-tab. [[https://stackoverflow.com/questions/7022898/emacs-autocompletion-in-emacs-lisp-mode][reference]]
 
@@ -907,7 +893,7 @@ Cannot get zmq (Jupyter dependency)  to work currently
 
 **** TODO open notebook in Emacs
 If I use EIN, add the setting for displaying the figures inline.
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :tangle no
   (use-package ein
     :commands (ein:notebooklist-open)
     ;; :config
@@ -1204,6 +1190,7 @@ Create a function to align the size of displayed latex framents with overall org
 For syntax highlighting in export html, we want htmlize version > =1.34=
 #+begin_src emacs-lisp
   (use-package htmlize
+    :ensure t
     :defer t)
 #+end_src
 
@@ -1696,9 +1683,6 @@ Helpful functions
         ;; (transparency 96)
         )
     (print "no theme"))
-
-
-
 #+end_src
 
 * Windows Core setup
@@ -1758,9 +1742,6 @@ source: https://github.com/syl20bnr/spacemacs/issues/7262
       (add-hook 'window-setup-hook
 		(lambda ()(set-face-background 'default "unspecified-bg" (selected-frame)))))
 #+end_src
-
-** TODO Emacs 30 get "???" instead of inbox in agenda
-Saving accessing and saving inbox.org will fix the issue.
 
 * Localwords                                                       :noexport:
 #  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords Esc  Smartparens UI Helpful's Yasnippet LSP Modeline Dap Flycheck modeline Treemacs backend lsp vterm eshell  Dired dracula clangd ui Grammarly workspaces commenter Pyright CMake Flyspell Pyvenv treemacs shellcheck Linum Proced Hacky GTD
